starting with the css for media print

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,30 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/
 @import "fonts.css";
 // endbower
 
+
+@media print {
+
+    .header {
+        .headerContainer {
+            width: 500px;            
+        }
+         .text-muted {
+            font-size: 20px;
+         }
+        .img {
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        border-radius: 100px;
+        vertical-align: bottom;
+        margin: 20px;
+        background-size: cover !important;
+        background-image: url('https://media.licdn.com/mpr/mpr/shrink_200_200/p/5/005/065/2a6/383cca3.jpg') !important;
+        }         
+    }
+
+}
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
@@ -26,7 +50,6 @@ ul {
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
-.marketing,
 .footer {
     padding-left: 15px;
     padding-right: 15px;
@@ -47,6 +70,16 @@ ul {
     h2 {
         display: inline-block;
     }
+    .img {
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        border-radius: 100px;
+        vertical-align: bottom;
+        margin: 20px;
+        background-size: cover;
+        background-image: url('https://media.licdn.com/mpr/mpr/shrink_200_200/p/5/005/065/2a6/383cca3.jpg');
+    }
     .text-muted {
         text-align: center;
         color: #999999;
@@ -58,7 +91,11 @@ ul {
     }
     .headerContainer {
         width: 700px;
-        margin: 0 auto;    
+        margin: 0 auto;
+        display: inline-block;    
+    }
+    .btn .print {
+        display: inline-block;
     }
 }
 
@@ -83,14 +120,6 @@ ul {
     }
 }
 
-/* Supporting marketing content */
-.marketing {
-    margin: 40px 0;
-    p + h4 {
-        margin-top: 28px;
-    }
-}
-
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .container {
@@ -101,9 +130,9 @@ ul {
         .panel {
             margin-bottom: 20px;
             background-color: #fff;
-            border: 1px solid rgba(242, 242, 242, 0.41);
+            border: none;
             border-radius: 4px;
-            box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.27);
+            box-shadow: 2px 1px 2px 2px rgba(0, 0, 0, 0.27);
             .panel-heading {
                 color: white;
                 background-color: rgba(4, 136, 229, 1);
@@ -113,7 +142,7 @@ ul {
             .panel-body {
                 ul li:first-child {
                     font-weight: bold;
-                    font-family: "Gotham Bold", Arial, Helvetica, sans-serif;
+                    font-family: "Gotham Medium", Arial, Helvetica, sans-serif;
                     padding-bottom: 5px;
                 }                  
             }            
@@ -126,7 +155,6 @@ ul {
 
     /* Remove the padding we set earlier */
     .header,
-    .marketing,
     .footer {
         padding-left: 0;
         padding-right: 0;
@@ -151,7 +179,6 @@ ul {
 
     /* Remove the padding we set earlier */
     .header,
-    .marketing,
     .footer {
         padding-left: 0;
         padding-right: 0;
