--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -47,6 +47,11 @@ ul {
     list-style: none;
 }
 
+.boldText {
+    font-weight: bold;
+    font-family: "Gotham Medium", Arial, Helvetica, sans-serif;
+}
+
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
