--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -52,7 +52,27 @@ ul {
     font-family: "Gotham Medium", Arial, Helvetica, sans-serif;
 }
 
+.headerCollapsible {
+    display: block;
+    width: 100%;
+    padding: 15px 0;
+    font-weight: bold;
+    font-family: "Gotham Medium", Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    cursor: pointer;
+}
+.headerCollapsible:hover {
+    padding-left: 5px;
+    @include transition-duration(.2s);
+}
 
+.glyphicon-plus:before {
+    box-sizing: initial;
+    background-color: #0488e5;
+    color: white;
+    padding: 5px 10px;
+    margin-right: 10px;
+}        
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .footer {
@@ -136,21 +156,14 @@ ul {
             margin-bottom: 20px;
             background-color: #fff;
             border: none;
-            border-radius: 4px;
+            border-radius: initial;
             box-shadow: 2px 1px 2px 2px rgba(0, 0, 0, 0.27);
             .panel-heading {
                 color: white;
                 background-color: rgba(4, 136, 229, 1);
                 border-color: #ddd;
                 text-shadow: 2px 2px #434343;                
-            }
-            .panel-body {
-                ul li:first-child {
-                    font-weight: bold;
-                    font-family: "Gotham Medium", Arial, Helvetica, sans-serif;
-                    padding-bottom: 5px;
-                }                  
-            }            
+            }          
             .glyphicon {
                 float: left;
                 padding-right: 10px;
@@ -198,4 +211,13 @@ ul {
     .jumbotron {
         border-bottom: 0;
     }
+}
+
+/*Mixins here*/
+
+@mixin transition-duration($duration) {
+  -moz-transition-duration: $duration;
+  -webkit-transition-duration: $duration;
+  -o-transition-duration: $duration;
+  transition-duration: $duration;
 }
