--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,6 +45,9 @@ body {
 
 ul {
     list-style: none;
+    li {
+        padding-bottom: 5px;
+    }      
 }
 
 .boldText {
@@ -62,8 +65,14 @@ ul {
     cursor: pointer;
 }
 .headerCollapsible:hover {
-    padding-left: 5px;
-    @include transition-duration(.2s);
+    background-color: #0488e5;
+    color: white;
+    @include transition-duration(1s);
+    &.glyphicon-plus:before {
+        @include transition-duration(1s);
+        background-color: white;
+        color: black;
+    }     
 }
 
 .glyphicon-plus:before {
@@ -73,6 +82,8 @@ ul {
     padding: 5px 10px;
     margin-right: 10px;
 }        
+
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .footer {
