hardcoded width for the main layout

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -49,6 +49,10 @@ ul {
     }      
 }
 
+.container {
+    max-width: 1380px !important;
+}
+
 .boldText {
     font-weight: bold;
     font-family: "Gotham Medium", Arial, Helvetica, sans-serif;
