--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,7 +8,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
 @media print {
 
     .header {
-        .headerContainer {
+        .headerText {
             width: 500px;            
         }
          .text-muted {
@@ -99,7 +99,6 @@ ul {
 /* Custom page header */
 .header {
     border-bottom: 1px solid #e5e5e5;
-
     /* Make the masthead heading the same height as the navigation */
     h3,h2 {
         margin-top: 0;
@@ -111,6 +110,10 @@ ul {
     h2 {
         display: inline-block;
     }
+    .headerContainer {
+        width: 900px;
+        margin: 0 auto;        
+    }
     .img {
         display: inline-block;
         width: 100px;
@@ -121,7 +124,7 @@ ul {
         background-size: cover;
         background-image: url('https://media.licdn.com/mpr/mpr/shrink_200_200/p/5/005/065/2a6/383cca3.jpg');
     }
-    .text-muted {
+    .header-Title {
         text-align: center;
         color: #999999;
         text-shadow: 2px 2px rgba(237, 236, 236, 0.5);        
@@ -130,7 +133,7 @@ ul {
         color: #d0d0d0;
         font-size: 25px;
     }
-    .headerContainer {
+    .headerText {
         width: 700px;
         margin: 0 auto;
         display: inline-block;    
