--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,6 +19,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
 body {
     margin: 0;
     font-family: "Gotham Book", Arial, Helvetica, sans-serif;
+    font-size: 150%;
 }
 .container {
     max-width: 1380px !important;
@@ -35,7 +36,6 @@ body {
     padding: 15px 0;
     font-weight: bold;
     font-family: "Gotham Medium", Arial, Helvetica, sans-serif;
-    font-size: 15px;
     cursor: pointer;
 }
 .headerCollapsible:hover {
@@ -167,16 +167,6 @@ body {
     margin: 30px 0;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-    text-align: center;
-    border-bottom: 1px solid #e5e5e5;
-    .btn {
-        font-size: 21px;
-        padding: 14px 24px;
-    }
-}
-
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .container {
@@ -194,6 +184,10 @@ body {
                 color: white;
                 background-color: $blue500;
                 border-color: #ddd;
+                font-size: 1.250em;
+                .panel-title {
+                    font-size: 1em;
+                }
             }          
             .glyphicon {
                 float: left;
