fixed fonts size

--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -14,10 +14,10 @@ $greenl500: #8BC34A;
 $lime500: #CDDC39;
 $yellow500: #FFEB3B;
 $amber500: #FFC107;
-$orange: #FF9800;
-$oranged: #FF5722;
-$brown: #795548;
-$grey: #9E9E9E;
+$orange500: #FF9800;
+$oranged550: #FF5722;
+$brown500: #795548;
+$grey500: #9E9E9E;
 $bluegrey: #607D8B;
 
 /*Mixins here*/
