--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,7 +34,6 @@ body {
     display: block;
     width: 100%;
     padding: 15px 0;
-    font-weight: bold;
     font-family: "Gotham Medium", Arial, Helvetica, sans-serif;
     cursor: pointer;
 }
@@ -144,6 +143,7 @@ body {
         margin: 20px;
         background-size: cover;
         background-image: url('https://media.licdn.com/mpr/mpr/shrink_200_200/p/5/005/065/2a6/383cca3.jpg');
+        border: 1px solid $grey500;
     }
     .header-Title {
         text-align: center;
