--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,25 +11,92 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
     color: #000;
     padding: 0.2em 0;
 }
-.fadeOut {
-    @include transition-duration(1s);
-    opacity: 0 !important;
-}
 /* Space out content a bit */
 body {
     margin: 0;
     font-family: "Gotham Book", Arial, Helvetica, sans-serif;
     font-size: 150%;
 }
-.container {
-    max-width: 1380px !important;
+/* Custom page header */
+.header {
+    border-bottom: 1px solid #e5e5e5;
+    /* Make the masthead heading the same height as the navigation */
+    h3,h2 {
+        margin-top: 0;
+        margin-bottom: 0;
+        line-height: 40px;
+        padding-bottom: 19px;
+    }
+    h2 {
+        display: inline-block;
+    }
+    .img {
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        border-radius: 100px;
+        vertical-align: bottom;
+        margin: 20px;
+        background-size: cover;
+        background-image: url('https://media.licdn.com/mpr/mpr/shrink_200_200/p/5/005/065/2a6/383cca3.jpg');
+        border: 1px solid $grey500;
+    }
+    .header-Title {
+        text-align: center;
+        color: $bluegrey;
+    }
 }
-
-.boldText {
-    font-weight: bold;
-    font-family: "Gotham Medium", Arial, Helvetica, sans-serif;
+/* Styles for the panels and containers */
+.panel {
+    ul {
+        list-style: none;
+        padding-left: 20px;        
+        li {
+            padding: 4px;
+            }:before{
+            content: '*';
+            color: blue;
+            line-height: 1em;
+            vertical-align: sub;
+            padding-right: 4px;
+        }
+    }
 }
-
+.landingHome {
+    .panel {
+        margin-bottom: 20px;
+        background-color: #fff;
+        border: none;
+        @include box-shadow (1px 1px 2px 1px rgba(0, 0, 0, 0.27));            
+        border-radius: initial;
+        .panel-heading {
+            color: white;
+            background-color: $blue500;
+            border-color: #ddd;
+            font-size: 1.250em;
+            .panel-title {
+                font-size: 1em;
+            }
+            .glyphicon {
+                padding: 3px 10px 0px 0px;                    
+            }
+        }          
+        .glyphicon {
+            float: left;
+            padding-right: 10px;
+        }          
+    }
+}
+.container-narrow > hr {
+    margin: 30px 0;
+}
+.panel-heading {
+    border-radius: initial;
+}
+.col-md-12 {
+    padding: 0;
+}
+/* Styles for the collapsible widget*/
 .headerCollapsible {
     display: block;
     width: 100%;
@@ -47,24 +114,6 @@ body {
         color: black;
     }     
 }
-.panel-heading {
-    border-radius: initial;
-}
-.panel {
-    ul {
-        list-style: none;
-        padding-left: 20px;        
-        li {
-            padding: 4px;
-            }:before{
-            content: '*';
-            color: blue;
-            line-height: 1em;
-            vertical-align: sub;
-            padding-right: 4px;
-        }
-    }
-}
 .glyphicon-plus:before {
     box-sizing: initial;
     background-color: $red500;
@@ -75,15 +124,13 @@ body {
     line-height: 0px;
     vertical-align: middle;
 }        
-
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
+/* These elements gets side spacing for mobile first views */
 .header,
 .footer {
-    padding-left: 15px;
-    padding-right: 15px;
+    //padding-left: 15px;
+    //padding-right: 15px;
+    text-align: center;
 }
-
 /* Overlay */
 .overlay {
     width: 100%;
@@ -103,7 +150,7 @@ body {
         background-color:black;        
     }    
 }
-
+/* Buttons*/
 .printbtn {
     border-radius: 100px;
     background-color: $red500;
@@ -114,56 +161,9 @@ body {
     border: none;
     @include box-shadow (1px 1px 1px 0px rgba(0, 0, 0, 0.27));
     @include transition-duration(1s);
+    /*Disabling the print button, no css for printing yet*/
+    display: none;
 }
-
-
-/* Custom page header */
-.header {
-    border-bottom: 1px solid #e5e5e5;
-    /* Make the masthead heading the same height as the navigation */
-    h3,h2 {
-        margin-top: 0;
-        margin-bottom: 0;
-        line-height: 40px;
-        padding-bottom: 19px;
-        text-align: center;
-    }
-    h2 {
-        display: inline-block;
-    }
-    .headerContainer {
-        width: 900px;
-        margin: 0 auto;             
-    }
-    .img {
-        display: inline-block;
-        width: 100px;
-        height: 100px;
-        border-radius: 100px;
-        vertical-align: bottom;
-        margin: 20px;
-        background-size: cover;
-        background-image: url('https://media.licdn.com/mpr/mpr/shrink_200_200/p/5/005/065/2a6/383cca3.jpg');
-        border: 1px solid $grey500;
-    }
-    .header-Title {
-        text-align: center;
-        color: $bluegrey;
-    }
-    .headerText {
-        width: 700px;
-        margin: 0 auto;
-        display: inline-block;
-        h2 {
-            padding-right: 15px;
-        }
-        .glyphicon {
-            color: $grey500;
-            font-size: 17px;
-        }    
-    }
-}
-
 /* Custom page footer */
 .footer {
     padding-top: 19px;
@@ -171,42 +171,21 @@ body {
     border-top: 1px solid #e5e5e5;
 }
 
-.container-narrow > hr {
-    margin: 30px 0;
+/* Hiding the content for mobile */
+.header .img, .col-md-6 {
+    display: none;
 }
+
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
+
+.header .img, .col-md-6 {
+    display: inline-block;
+}    
     .container {
         max-width: 730px;
     }
-
-    .landingHome {
-        .panel {
-            margin-bottom: 20px;
-            background-color: #fff;
-            border: none;
-            @include box-shadow (1px 1px 2px 1px rgba(0, 0, 0, 0.27));            
-            border-radius: initial;
-            .panel-heading {
-                color: white;
-                background-color: $blue500;
-                border-color: #ddd;
-                font-size: 1.250em;
-                .panel-title {
-                    font-size: 1em;
-                }
-                .glyphicon {
-                    padding: 3px 10px 0px 0px;                    
-                }
-            }          
-            .glyphicon {
-                float: left;
-                padding-right: 10px;
-            }          
-        }
-    }
-
     /* Remove the padding we set earlier */
     .header,
     .footer {
@@ -227,25 +206,44 @@ body {
 
 /* Responsive: High resolution screens */
 @media screen and (min-width: 1024px) {
+.header .img, .col-md-6 {
+    display: inline-block;
+}    
+
+    .container {
+        max-width: 1380px !important;
+        min-width: 1100px;
+    }   
+    .headerContainer {
+        width: 900px;
+        margin: 0 auto;             
+    }
+    .headerText {
+        width: 700px;
+        margin: 0 auto;
+        display: inline-block;
+        h2 {
+            padding-right: 15px;
+        }
+        .glyphicon {
+            color: $grey500;
+            font-size: 17px;
+        }    
+    }    
     .container {
         max-width: 1024px;
     }
-
-    /* Remove the padding we set earlier */
+    /* Remove the padding we set earlier 
     .header,
     .footer {
         padding-left: 0;
         padding-right: 0;
-    }
+    }*/
 
     /* Space out the masthead */
     .header {
         margin-bottom: 30px;
     }
 
-    /* Remove the bottom border on the jumbotron for visual effect */
-    .jumbotron {
-        border-bottom: 0;
-    }
 }
 
