--- a/app/styles/print.scss
+++ b/app/styles/print.scss
@@ -1,21 +1,17 @@
+// bower:scss
+@import "../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
+@import "base.scss";
+// endbower
 @media print {
-
-    .header {
-        .headerText {
-            width: 500px;            
-        }
-         .text-muted {
-            font-size: 20px;
-         }
-        .img {
+    body {
+        background-color: gray !important;
+        font-size: 100%;
+    }
+    .mobilev {
+        display: none;
+    }
+    .col-md-6 {
+        width: 49%;
         display: inline-block;
-        width: 100px;
-        height: 100px;
-        border-radius: 100px;
-        vertical-align: bottom;
-        margin: 20px;
-        background-size: cover !important;
-        background-image: url('https://media.licdn.com/mpr/mpr/shrink_200_200/p/5/005/065/2a6/383cca3.jpg') !important;
-        }         
     }
 }
