--- a/app/styles/print.scss
+++ b/app/styles/print.scss
@@ -1,11 +1,54 @@
-// bower:scss
-@import "../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
-@import "base.scss";
-// endbower
 @media print {
+    h1,h2,h3 {
+        font-size: 170%;
+    }    
     body {
-        background-color: gray !important;
-        font-size: 100%;
+        font-size: 90%;
+    }
+    .header {
+        .img {
+            width: 60px;
+            height: 60px;
+            margin: 0;
+            position: absolute;
+            left: 0;
+            top: 0;                        
+        }
+        .headerContainer {
+            .headerText {
+                .header-Title {
+                    margin: 0;
+                    padding-bottom: 10px;
+                }
+            }
+        }
+    }
+    .container {
+        padding: 0;
+    }
+    .landingHome {
+        .panel {
+            margin-bottom: 10px;
+            ul {
+                padding:0;
+                margin: 0;
+                li {
+                    padding: 2px 0;
+                }
+            }
+            .panel-heading {
+                padding: 5px 15px;
+                .glyphicon {
+                    padding: 1px 10px 0px 0px;
+                }
+            }        
+            .panel-body {
+                padding: 5px 10px;
+                .headerCollapsible {
+                    padding: 10px 0;
+                }
+            }
+        }        
     }
     .mobilev {
         display: none;
@@ -13,5 +56,10 @@
     .col-md-6 {
         width: 49%;
         display: inline-block;
+        padding: 20px 10px 20px 0px;
     }
+    .glyphicon-plus:before {
+        padding: 0px 4px;
+    }
+
 }
