--- a/app/styles/print.scss
+++ b/app/styles/print.scss
@@ -52,6 +52,9 @@
                 .headerCollapsible {
                     padding: 10px 0;
                 }
+                .collapse {
+                    display: block;
+                }
             }
         }        
     }
