--- a/app/styles/print.scss
+++ b/app/styles/print.scss
@@ -58,7 +58,7 @@
             }
         }        
     }
-    .mobilev {
+    .mobilev, .printbtn {
         display: none;
     }
     .col-md-6 {
