--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,12 @@ body {
     font-family: "Gotham Book", Arial, Helvetica, sans-serif;
     font-size: 150%;
 }
+body .container {
+    padding: initial;
+    .col-md-6 {
+        padding: initial;
+    }
+}
 /* Custom page header */
 .header {
     border-bottom: 1px solid #e5e5e5;
@@ -30,6 +36,10 @@ body {
     h2 {
         display: inline-block;
     }
+    /* Hiding .glyphicon*/
+    .glyphicon {
+        display: none;
+    }    
     .img {
         display: inline-block;
         width: 100px;
@@ -44,7 +54,7 @@ body {
     .header-Title {
         text-align: center;
         color: $bluegrey;
-    }
+    }   
 }
 /* Styles for the panels and containers */
 .panel {
@@ -178,17 +188,21 @@ body {
     //display: none;
 }
 
+.printedLink {
+    display: none;
+}
+
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-.mobilev {
-    display: none;
-}
-.header .img, .col-md-6 {
-    display: inline-block;
-}    
-    .container {
-        max-width: 730px;
+    .mobilev {
+        display: none;
+    }
+    .header .img, .col-md-6 {
+        display: inline-block;
+    }    
+    body .container {
+        width: initial;      
     }
     /* Remove the padding we set earlier */
     .header,
@@ -210,24 +224,26 @@ body {
 
 /* Responsive: High resolution screens */
 @media screen and (min-width: 1024px) {
-.header .img, .col-md-6 {
-    display: inline-block;
-}    
-
-    .container {
+    .header .img, .col-md-6 {
+        display: inline-block;
+    }    
+    body .container {
         max-width: 1380px !important;
         min-width: 1100px;
+        .col-md-6 {
+            padding: 0 15px;
+        }
     }   
     .headerContainer {
         width: 900px;
         margin: 0 auto;             
     }
     .headerText {
-        width: 700px;
+        min-width: 700px;
         margin: 0 auto;
         display: inline-block;
         h2 {
-            padding-right: 15px;
+            //padding-right: 15px;
         }
         .glyphicon {
             color: $grey500;
