--- a/app/styles/print.scss
+++ b/app/styles/print.scss
@@ -3,7 +3,7 @@
 // endbower
 @media print {
     h1,h2,h3 {
-        font-size: 170%;
+        font-size: 200%;
     }    
     body {
         font-size: 90%;
@@ -21,7 +21,10 @@
             .headerText {
                 .header-Title {
                     margin: 0;
-                    padding-bottom: 10px;
+                    padding: 0;
+                }
+                .glyphicon {
+                    color: red;
                 }
             }
         }
@@ -60,6 +63,9 @@
     }
     .mobilev, .printbtn {
         display: none;
+    }
+    .pintedLink {
+        display: block;
     }
     .col-md-6 {
         width: 50%;
