--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -169,7 +169,9 @@ body .container {
     font-size: 17px;
     border: 1px solid white;
     border: none;
-    vertical-align: text-bottom;
+    margin: 20px 0;
+    position: absolute;
+    right: 2%;    
     @include box-shadow (1px 1px 1px 0px rgba(0, 0, 0, 0.27));
     @include transition-duration(1s);
 }
